kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: homework
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: server
        image: tomyork1986/simple-web-server:1.1.0
        volumeMounts:
        - name: homework
          mountPath: /homework
#        ports:
#          - containerPort: 8000
#            name: http-web-svc
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/index.html"
            port: 8000
            httpHeaders:
            - name: "Cookie"
              value: "shop_session-id=x-readiness-probe"
      volumes:
      - name: homework
        emptyDir: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
